@@ -1,7 +1,9 @@
 2010-03-12  Onkar Shinde  <onkarshinde@gmail.com>
 
 	* installer.nsi.in: Use the MUI method for setting icon for installer.
-	* pixmaps/gnusim8085_icon*: Do not include old icon files.
+	Add functionality to embed GTK+ runtime installer. Changes derived from
+	public domain script of GSmartControl.
+	* pixmaps/gnusim8085_icon*: Delete old icon files.
 
 2010-03-09  Onkar Shinde  <onkarshinde@gmail.com>
 
